@@ -1,6 +1,7 @@
 Changelog
 ---------
 2.0.6
+ - ADDED: Utility class to safely reference TileEntities without interfering with chunk (un)loading and causing memory leaks
  - FIXED: Resource Pack file structure
 
 2.0.5
